pkl-core/src/test/files/LanguageSnippetTests/input/errors/forGeneratorDuplicateParams2.pkl
a = List(1, 2, 3, 4)

b = List("a", "b", "c", "d")

foo {
  for (_dup, i in a) {
    for (_dup, j in b) {
      i + j
    }
  }
}
